samples/_failures_safe/1761140484_7f1ba3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ff0123c2.c: In function ‘main’:
./samples/SAFE/__tmp_ff0123c2.c:137: error: expected ‘;’ at end of input
./samples/SAFE/__tmp_ff0123c2.c:136:9: error: expected declaration or statement at end of input
  136 |         return EXIT_FAILURE
      |         ^~~~~~
./samples/SAFE/__tmp_ff0123c2.c:136:9: error: expected declaration or statement at end of input
